# macd_6122

./: .gitignore  CMakeLists.txt  LICENSE  common.h  daily_data.txt  macd_6122.pro  macdchart.cpp  macdchart.h  main.cpp  stockdata.qrc
QtBinDebug/: Makefile  Makefile.Debug
QtBinDebug-MacOS/: Makefile  moc_macdchart.cpp  moc_predefs.h  qrc_stockdata.cpp
QtBinDebug-MacOS/macd_6122.app/Contents/: Info.plist
QtBinDebug-MacOS/macd_6122.app/Contents/MacOS/: macd_6122
QtBinDebug-Win64/: Makefile  Makefile.Release
QtBinDebug-Win64/QtBinDebug/: Makefile.Release
QtBinDebug-Win64/QtBinDebug/debug/: moc_macdchart.cpp
QtBinDebug/debug/: moc_mainwindow.cpp  qrc_stockdata.cpp
